Complete version 1, fix bugs, final layout complete and make code more readable

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: 0; 
     padding: 0; 
     box-sizing: border-box; 
+    
    } 
    
 body {
@@ -11,13 +12,14 @@ body {
 
 }
 
-header {
+header, footer {
     height: 10vh;
     color: white;
     background-color: grey;
     font-size: 28px;
     text-align: center;
     font-weight: bold;
+    padding-top: 3vh;
 
 }
 
@@ -29,26 +31,15 @@ header {
 
 }
 
-button {
-margin-bottom: 4vh;
-margin-top: 4vh;
+button,  #winner {
+   margin-bottom: 4vh;
+   margin-top: 4vh;
+
 }
-
-
-footer {
-    height: 10vh;
-    background-color: grey;
-    font-size: 28px;
-    font-weight: bold;
-    text-align: center;
-    color: white;
-}
-
-
 
 .grid-container {
     resize: both;
-   overflow: auto;
+    overflow: auto;
     width: 50vh;
     height: 50vh;   
     display: grid;
@@ -59,6 +50,7 @@ footer {
     grid-template-rows: repeat(3, 10fr);
     grid-template-columns: repeat(3, 10fr);
     margin-bottom: 6vh;
+
   }
   
   .block {
@@ -71,7 +63,5 @@ footer {
     align-items: center;
     padding: 10px;
     font-size: 88px;
-    
-  
-    
+
   }
